# PathTracing-Renderer

./: CMakeLists.txt  Makefile  PathTracing  PathTracing.cbp  README.md  main.cpp
const/: Constant.cpp  Constant.h  Ray.h  Vec.cpp  Vec.h
object/: AABB.cpp  AABB.h  Face.h  KdTree.cpp  KdTree.h  Obj.cpp  Obj.h  Object.h  Plane.cpp  Plane.h  Spheres.cpp  Spheres.h  Texture.cpp  Texture.h
result/goodpics/: ._image6_18-13_43-F_180-A_4.000000_10ssp.ppm  ._image6_23-18_50-F_195-A_1.700000_250ssp.ppm  ._image6_25-14_19-F_0-A_1.700000_250ssp.ppm
world&camera/: Camera.h  World.cpp  World.h
